# clap-nr

./: .gitignore  CMakeLists.txt  CNAME  LICENSE  README.md  THIRD-PARTY-NOTICES.md  build-installer-linux.sh  build-installer-mac.sh  build-installer-win.ps1  build-installer.bat  build-linux-static-libs.sh  build-linux.sh  build-mac.sh  build-universal-deps.sh  build-win.ps1  build.bat  install-linux-deps.sh  install-linux.sh  install-mac.sh  install-win.bat  install-win.ps1  install.bat  installer.iss  uninstall-linux.sh  uninstall-mac.sh  uninstall-win.bat  uninstall-win.ps1  uninstall.bat  upgrade-cmake.sh
build-linux/: Makefile
build-mac/: Makefile
clap-nr-linux-installer/: README-INSTALLER.txt  README.md  THIRD-PARTY-NOTICES.md  install.sh  uninstall.sh
docs/: CNAME  index.html
installer-assets/: make-assets.py
libs/linux-static/include/: specbleach_adenoiser.h  specbleach_denoiser.h
libs/linux-static/lib/: libfftw3.la  libfftw3f.la  librnnoise.la
libs/linux-static/lib/cmake/fftw3/: FFTW3Config.cmake  FFTW3fConfig.cmake
libs/linux-static/lib/pkgconfig/: fftw3.pc  fftw3f.pc  rnnoise.pc
libs/linux-static/lib/x86_64-linux-gnu/pkgconfig/: libspecbleach.pc
src/: clap_nr.c  clap_nr.c.bak  gui.h  gui_imgui.cpp  gui_imgui.mm  gui_mac.mm  gui_win32.c  version.h
src/nr/: FDnoiseIQ.h  anr.c  anr.h  comm.h  emnr.c  emnr.h  nr0.c  nr0.h  rnnr.c  rnnr.h  sbnr.c  sbnr.h
test/: test-plugin.bat  test-plugin.ps1
